--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,46 @@
-# Compiled class file
-*.class
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Log file
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# BlueJ files
-*.ctxt
+# testing
+/coverage
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# database
+/prisma/db.sqlite
+/prisma/db.sqlite-journal
+db.sqlite
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# next.js
+/.next/
+/out/
+next-env.d.ts
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
+.env
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+
+# idea files
+.idea
