--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.10",
     "geist": "^1.3.0",
+    "highcharts": "^11.4.6",
+    "highcharts-react-official": "^3.2.1",
     "next": "^14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
