--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.50.0",
-    "@trpc/client": "^11.0.0-rc.446",
-    "@trpc/react-query": "^11.0.0-rc.446",
-    "@trpc/server": "^11.0.0-rc.446",
+    "@tanstack/react-query": "^5.52.1",
+    "@trpc/client": "^11.0.0-rc.485",
+    "@trpc/next": "^11.0.0-rc.485",
+    "@trpc/react-query": "^11.0.0-rc.485",
+    "@trpc/server": "^11.0.0-rc.485",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -41,7 +42,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3",
+    "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
