--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
+    "format": "npx prettier . --write",
+    "lint": "next lint --fix",
+    "start": "next start",
+    "prep-commit": "npm run format && npm run lint && git add ."
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.0",
@@ -56,8 +58,9 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
