--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.1",
     "@sentry/nextjs": "^8.33.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.52.1",
@@ -37,6 +38,7 @@
     "geist": "^1.3.0",
     "highcharts": "^11.4.6",
     "highcharts-react-official": "^3.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.427.0",
     "next": "^14.2.4",
     "postgres": "^3.4.4",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
